--- a/pages/index/addApply/addApply.wxss
+++ b/pages/index/addApply/addApply.wxss
@@ -22,19 +22,24 @@
     line-height: 28px;
 }
 
-.addApply-cell picker,.addApply-cell text{
+.addApply-cell picker,.addApply-cell text,.addApply-cell input,.addApply-cell textarea,.addApply-cell button,.text-border{
     flex: 1 1 auto;
     margin-right: 11px;font-size: 12px;
     line-height: 28px;
     text-indent: 11px;
     color: #666666;
+    min-height: 28px;
 }
 
 .addApply-cell picker{
-    border: 1px #CFCFCF solid;
-    border-radius: 4px;
+    
     background-image: url(../../../images/xiala.png);
     background-size: 13px 7px;
     background-repeat: no-repeat;
     background-position: 95% 10.5px
+}
+
+.addApply-cell input,.addApply-cell textarea,.addApply-cell picker,.text-border{
+      border: 1px #CFCFCF solid;
+       border-radius: 4px;
 }
