--- a/pages/verify/index.wxml
+++ b/pages/verify/index.wxml
@@ -1,6 +1,8 @@
 <import src="/templates/templates.wxml" />
 <import src="/pages/verify/unverify/unverify.wxml" />
-<!--<import src="/pages/verify/unverify/unverify.wxml" />-->
+<import src="/pages/index/pended/pended.wxml" />
+<import src="/pages/index/history/history.wxml" />
+<import src="/pages/verify/common.wxml" />
 
 <template is="main-nav" data="{{navTitleArr}}">
 </template>
@@ -11,10 +13,34 @@
           {{selectDataArr[selectDataIndex]}}
         </view>
       </picker>
+      <label class="checkbox">
+        <checkbox value="" checked="" />
+      </label>
     </view>
+
+      <view class="weui-search-bar">
+            <view class="weui-search-bar__form">
+                <view class="weui-search-bar__box">
+                    <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+                    <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" />
+                    <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
+                        <icon type="clear" size="14"></icon>
+                    </view>
+                </view>
+                <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
+                    <icon class="weui-icon-search" type="search" size="14"></icon>
+                    <view class="weui-search-bar__text">搜索</view>
+                </label>
+            </view>
+            <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
+        </view>
+      
+        
+   
 
 <template is="{{pageName}}" data="{{data}}"></template>
 
 <template is="{{noMore ? 'noMore' : 'loadMore'}}"></template>
 
-<button class="add-apply" bindtap="gotoAddApply"></button>
+<!--<button class="add-apply" bindtap="gotoAddApply"></button>-->
+<image src="/images/shengpianniu-2.png" class="add-apply" bindtap="approve"></image>
