--- a/pages/index/applyDetail/applyDetail.wxml
+++ b/pages/index/applyDetail/applyDetail.wxml
@@ -24,6 +24,12 @@
 <template is="reson-readonly" data="{{data}}">
 </template>
 
+<view class="" wx:if="{{willRefuse}}">
+    <label>退回操作</label>
+    <picker bindchange="refuseChange" range="{{refuseArr}}" value="{{refuseIndex}}" >{{refuseArr[refuseIndex]}}</picker>
+    <button bindtap="refuseClick">退回</button>
+</view>
+
 <template is="cell-picture-readonly" data="{{files}}">
   
 </template>
