--- a/pages/query/index.wxml
+++ b/pages/query/index.wxml
@@ -1,11 +1,13 @@
 <import src="/templates/templates.wxml" />
-<import src="/pages/verify/unverify/unverify.wxml" />
-<import src="/pages/index/pended/pended.wxml" />
+<import src="/pages/query/monthWork/monthWork.wxml" />
+
+<import src="/pages/query/dayReport/dayReport.wxml" />
+
 <import src="/pages/index/history/history.wxml" />
 <import src="/pages/verify/common.wxml" />
 
 <template is="main-nav" data="{{navTitleArr}}">
 </template>
 
-<template is="{{pageName}}" data="{{data}}"></template>
+<template is="{{pageName}}" data="{{...data}}"></template>
 
