--- a/pages/index/common.wxml
+++ b/pages/index/common.wxml
@@ -4,17 +4,17 @@
   <view class="main-cell-icon">
       <image src="{{item.C3_542383374989}}"  bindtap="gotoUnverifyDetailPage"><text data-item="{{item}}" class="icon-title">{{item.C3_542397132420}}</text></image>
     <image src="{{item.C3_543518801920}}" mode="aspectFit"></image>
-    <label>{{item.C3_533407351131}}</label>
+    <label class="font-999999">{{item.C3_533407351131}}</label>
   </view>
-  <view class="main-cell-title">
+  <view class="main-cell-title width-calc-main">
     <label>{{item.C3_533398158705}}</label>
-    <label>{{item.C3_541449959569}}日{{item.C3_541450006047}}</label>
-    <label>{{item.C3_541449974021}}日{{item.C3_541450008801}}</label>
+    <label class="font-999999">{{item.C3_541449959569}}日{{item.C3_541450006047}}</label>
+    <label class="font-999999">{{item.C3_541449974021}}日{{item.C3_541450008801}}</label>
   </view>
-  <view class="main-cell-title">
+  <view class="main-cell-title width-70">
     <label>{{item.C3_541449935726}}小时</label>
-    <label>{{item.C3_541450072499}}:{{item.C3_541450107087}}</label>
-    <label>{{item.C3_541450084259}}:{{item.C3_541450125786}}</label>
+    <label class="font-999999">{{item.C3_541450072499}}:{{item.C3_541450107087}}</label>
+    <label class="font-999999">{{item.C3_541450084259}}:{{item.C3_541450125786}}</label>
   </view>
 </template>
 
@@ -22,7 +22,7 @@
 <template name="cell-attach">
   <view class="main-cell-btn">
     <!--<button class="image-attach" bindtap="attachShow" data-item="{{item}}">附件</button>-->
-    <image  src="/images/fujian.png" bindtap="attachShow" mode="aspectFit" data-item="{{item}}">                <text>附件</text>
+    <image  src="/images/fujian.png" bindtap="attachShow" mode="aspectFit" data-item="{{item}}">                <text class="font-999999">附件</text>
     </image>
   </view>
 </template>
@@ -30,7 +30,7 @@
 <!--详情-->
 <template name="cell-detail">
   <view class="main-cell-btn">
-    <image  src="/images/xiangqing.png" bindtap="gotoApplyDetail" mode="aspectFit" data-item="{{item}}">        <text>详情</text>
+    <image  src="/images/xiangqing.png" bindtap="gotoApplyDetail" mode="aspectFit" data-item="{{item}}">        <text class="font-999999">详情</text>
     </image>
   </view>
 </template>
@@ -38,14 +38,16 @@
 <!--提交-->
 <template name="cell-submit">
   <view class="main-cell-btn">
-    <button class="image-submit" data-tag="{{index}}" bindtap="submit">提交</button>
+    <image  src="/images/tijiao.png" bindtap="submit" mode="aspectFit" data-tag="{{index}}">        <text class="font-999999">提交</text>
+    </image>
   </view>
 </template>
 
 <!--修改-->
 <template name="cell-modify">
   <view class="main-cell-btn">
-    <button class="image-modify" data-item="{{item}}" bindtap="draftModify">修改</button>
+  <image  src="/images/xiugai.png" bindtap="draftModify" mode="aspectFit" data-item="{{item}}">        <text class="font-999999">修改</text>
+    </image>
   </view>
 </template>
 
@@ -53,7 +55,7 @@
 <template name="cell-modify-submit">
   <view class="main-cell-btn">
     <!--<button class="image-modify" data-item="{{item}}" bindtap="draftModifySubmit">修改并提交</button>-->
-     <image  src="/images/xiugai.png" bindtap="draftModifySubmit" mode="aspectFit" data-item="{{item}}">              <text>修改并提交</text>
+     <image  src="/images/xiugai.png" bindtap="draftModifySubmit" mode="aspectFit" data-item="{{item}}">              <text class="font-999999">修改并提交</text>
     </image>
   </view>
 </template>
@@ -67,7 +69,9 @@
 
 <!--状态-->
 <template name="state">
-  <text>{{item.C3_545948501137}}</text>
+  <view class="main-cell-text">
+  <text class="font-999999">{{item.C3_545948501137}}</text>
+   </view>
 </template>
 
 <!--添加编辑类型cell-->
@@ -134,13 +138,13 @@
 <template name="apply-person">
   <view class="addApply-cell">
     <label>审批人</label>
-    <text>{{tempApprove}}</text>
+    <text class="text-border">{{tempApprove}}</text>
   </view>
 </template>
 <template name="time-length">
   <view wx:if="{{!isCard}}" class="addApply-cell">
     <label>时长</label>
-    <text>{{hour}}</text>
+    <text class="text-border">{{hour}}</text>
     <button bindtap="hourCalculate">获取时长</button>
   </view>
 </template>
@@ -168,10 +172,6 @@
 <template name="cell-picture">
   <view class="addApply-cell">
     <view class="weui-uploader">
-      <view class="weui-uploader__hd">
-        <view class="weui-uploader__title">附件上传</view>
-        <view class="weui-uploader__info">{{files.length}}/2</view>
-      </view>
       <view class="weui-uploader__bd">
         <view class="weui-uploader__files" id="uploaderFiles">
           <block wx:for="{{files}}" wx:if="{{files[index]}}" wx:key="*this">
@@ -224,14 +224,14 @@
 <template name="time-length-readonly">
   <view class="addApply-cell">
     <label>时长</label>
-    <text>{{data.C3_541449935726}}</text>
+    <text class="text-border">{{data.C3_541449935726}}</text>
   </view>
 </template>
 
 <template name="reson-readonly">
   <view class="addApply-cell">
     <label>事由</label>
-    <text>{{data.C3_533143291117}}</text>
+    <text class="text-border">{{data.C3_533143291117}}</text>
   </view>
 </template>
 
@@ -258,9 +258,9 @@
     <label>审批流</label>
   </view>
   <view class="addApply-cell" wx:for="{{pendedProcessData}}">
-    <view class="{{item.C3_543790707188}} pended-process"></view>
+    <image src="{{item.C3_543790707188}}" class="pended-process"></image>
     <view class="pended-process-person">{{item.C3_541450392920}}</view>
-    <view class="pended-process-state {{item.C3_541450438440 == 'Y' ? 'pended-state-Y' : 'pended-state-N'}}"></view>
+    <image src="{{item.C3_541450438440}}" class="pended-process-state"></image>
     <view class="pended-process-date">{{item.C3_541450449702 ? 'item.C3_541450449702' : '未审核'}}</view>
   </view>
 </template>
