--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,3 +1,10 @@
+/*******common***********/
+.font-999999{
+  color: #999999;
+  font-size: 12px;
+}
+
+
 /******背景图片*********/
 .overtime {
   background-image: url(../../../images/jiaban.png);
@@ -54,56 +61,75 @@ background-image: url(../../../images/xiugai.png);
   position: relative;
   z-index: 10;
   background-color: white;
-  padding: 5px 0 5px 10px;
   border-style: solid;
   border-width: 0 0 1px 0;
   border-color: #e4e4e4;
+  height: 39px;
 }
 
-.main-select picker {
+/*.main-select picker {
   height: 30px;
   width: 120px;
   text-align: center;
   line-height: 30px;
   border: 1px lightgray solid;
   border-radius: 4px;
-}
+}*/
 
 /*****cell****/
 
 .main-cell {
   height: 94px;
-  display: flex;
+  /*display: flex;*/
+  font-size: 0;
   position: relative;
   background-color: white;
 }
 
-.main-cell-icon, .main-cell-title, .main-cell-detail, .main-cell-btn {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
+.main-cell-icon{
+  width: 60px;
+}
+
+.width-calc-main{
+  width: calc(100% - 210px);
+}
+
+.width-70{
+  width: 70px;
+}
+
+.main-cell-detail,.main-cell-btn{
+  width: 40px;
+}
+
+.main-cell-icon, .main-cell-title, .main-cell-detail, .main-cell-btn,.main-cell-text{
+  display: inline-block;
+  vertical-align: top;
+  height: inherit;
 }
 
 .main-cell-icon image {/*请假icon 背景地板和人力审批*/
-  margin: 0 auto;
-  background-repeat: no-repeat;
-  margin-top: 5px;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
   position: relative;
 }
 
 .main-cell-icon image:nth-child(1) {/*请假icon 背景地板*/
-  width: 44px;
-  height: 44px;
-  background-size: 44px 44px;
-  line-height: 44px;
+  width: 40px;
+  height: 40px;
+  background-size: 40px 40px;
+  line-height: 40px;
   color: white;
   font-weight: bold;
   text-align: center;
+  margin-top: 10px;
 }
 
 .main-cell-icon image:nth-child(2) {
   width: 100%;
-  height: 20px;
+  height: 15px;
+  margin-top: 4px;
 }
 
 .icon-title{/*请假icon中字*/
@@ -111,43 +137,28 @@ background-image: url(../../../images/xiugai.png);
   top: 0;
   left: 0;
   right: 0;
-  height: 44px;
+  height: 40px;
+  font-size: 18px;
+  color: white;
 }
-
-.layout-zzsp {
-  width: 31.875px;
-  height: 20px;
-  background-size: 31.875px 20px;
-}
-
-.layout-jlsp{
-  width: 29.655px;
-  height: 20px;
-  background-size: 29.655px 20px;
-}
-
-.layout-jlsp,.layout-spcg{
-  width: 20px;
-  height: 20px;
-  background-size: 20px 20px;
-}
-
 .main-cell-icon label {
   flex: 0 0 14px;
+  display: block;
   font-size: 12px;
   text-align: center;
   margin-top: 3px;
 }
 
 .main-cell-title label {
+  display: block;
   font-size: 12px;
   flex: 0 0 14px;
-  padding: 5px 0;
+  padding: 1px 0;
   text-align: center;
 }
 
 .main-cell-title label:nth-child(1) {
-  font-size: 20px;
+  font-size: 14px;
   flex: 1 1 auto;
   line-height: 46px;
   padding: 0;
@@ -159,15 +170,29 @@ background-image: url(../../../images/xiugai.png);
   margin-top: 19.5px;
   position: relative;
   overflow: visible;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .main-cell-btn text{
   font-size: 12px;
   position: absolute;
-  bottom: -20px;
+  bottom: -27px;
   text-align: center;
   right: 0;
   left: 0;
+}
+
+.main-cell-text{/*历史记录状态*/
+  width: 80px;
+}
+
+.main-cell-text text{
+  display: block;
+  text-align: center;
+  line-height: 80px;
+  height: inherit;
 }
 
 /****添加****/
