--- a/pages/query/monthWork/monthWork.wxml
+++ b/pages/query/monthWork/monthWork.wxml
@@ -2,12 +2,14 @@
 <import src="/pages/index/common.wxml" />
 <import src="../common.wxml" />
 <template name="monthWork">
-  <picker value="{{yearMothSelect}}" bindchange="monthWorkChange" data-tag="monthWork" range="{{yearMonthArr}}">
+  <view class="selector-contain">
+    <picker class="selector" value="{{yearMothSelect}}" bindchange="monthWorkChange" data-tag="monthWork" range="{{yearMonthArr}}">
     <view class="picker">
       {{yearMonthArr[yearMothSelect]}}
     </view>
   </picker>
-  <view id="week">
+  </view>
+  <view class="week-cell">
     <text>日</text>
     <text>一</text>
     <text>二</text>
@@ -16,21 +18,35 @@
     <text>五</text>
     <text>六</text>
   </view>
-  <view wx:for="{{dateArr}}">
-    <text>{{item.sun[0]}}</text>
-    <text style="color:{{item.sun[2]}}">{{item.sun[1]}}</text>
-    <text>{{item.mon[0]}}</text>
-    <text style="color:{{item.mon[2]}}">{{item.mon[1]}}</text>
-    <text>{{item.tus[0]}}</text>
-    <text style="color:{{item.tus[2]}}">{{item.tus[1]}}</text>
-    <text>{{item.wen[0]}}</text>
-    <text style="color:{{item.wen[2]}}">{{item.wen[1]}}</text>
-    <text>{{item.thur[0]}}</text>
-    <text style="color:{{item.thur[2]}}">{{item.thur[1]}}</text>
-    <text>{{item.fri[0]}}</text>
-    <text style="color:{{item.fri[2]}}">{{item.fri[1]}}</text>
-    <text>{{item.sat[0]}}</text>
-    <text style="color:{{item.sat[2]}}">{{item.sat[1]}}</text>
-    <view class="viewne"></view>
+  <view class="calendar-cell" wx:for="{{dateArr}}">
+    <view class="calendar-cell-col">
+      <text class="calendar-title">{{item.sun[0]}}</text>
+      <text class="calendar-subTitle" style="color:{{item.sun[2]}}">{{item.sun[1]}}</text>
+    </view>
+    <view class="calendar-cell-col">
+    <text class="calendar-title">{{item.mon[0]}}</text>
+    <text class="calendar-subTitle" style="color:{{item.mon[2]}}">{{item.mon[1]}}</text>
+    </view>
+    <view class="calendar-cell-col">
+    <text class="calendar-title">{{item.tus[0]}}</text>
+    <text class="calendar-subTitle" style="color:{{item.tus[2]}}">{{item.tus[1]}}</text>
+    </view>
+    <view class="calendar-cell-col">
+    <text class="calendar-title">{{item.wen[0]}}</text>
+    <text class="calendar-subTitle" style="color:{{item.wen[2]}}">{{item.wen[1]}}</text>
+    </view>
+    <view class="calendar-cell-col">
+    <text class="calendar-title">{{item.thur[0]}}</text>
+    <text class="calendar-subTitle" style="color:{{item.thur[2]}}">{{item.thur[1]}}</text>
+    </view>
+    <view class="calendar-cell-col">
+    <text class="calendar-title">{{item.fri[0]}}</text>
+    <text class="calendar-subTitle" style="color:{{item.fri[2]}}">{{item.fri[1]}}</text>
+    </view>
+    <view class="calendar-cell-col">
+    <text class="calendar-title">{{item.sat[0]}}</text>
+    <text class="calendar-subTitle" style="color:{{item.sat[2]}}">{{item.sat[1]}}</text>
+    </view>
+    <view class="gray-line"></view>
   </view>
 </template>
